# ska-namespace-manager

./: .dockerignore  .gitignore  .gitlab-ci.yml  .release  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
charts/ska-namespace-manager/: Chart.yaml  values.yaml
charts/ska-namespace-manager/environments/templated/: ci.yml  local.yml
charts/ska-namespace-manager/templates/: _helpers.tpl
charts/ska-ser-namespace-manager/: Chart.yaml  values.yaml
charts/ska-ser-namespace-manager/environments/: all.yml  ci.yml
charts/ska-ser-namespace-manager/templates/_helpers/: _image.tpl  _labels.tpl  _names.tpl  _util.tpl
docs/src/: conf.py  index.rst
docs/src/design/: motivation.rst  overview.rst
src/: action_controller.py  api.py  collect_controller.py  collector.py
src/ska_ser_namespace_manager/: __init__.py
src/ska_ser_namespace_manager/api/: api_config.py  metrics.py  metrics_api.py  people_api.py  people_db.py
src/ska_ser_namespace_manager/collector/: collector.py  collector_config.py  namespace_collector.py  ownership_collector.py
src/ska_ser_namespace_manager/controller/: action_controller.py  action_controller_config.py  collect_controller.py  collect_controller_config.py  controller.py  controller_config.py  leader_controller.py  leader_controller_config.py  leader_lock.py
src/ska_ser_namespace_manager/core/: config.py  k8s.py  kubernetes_api.py  logging.py  namespace.py  notifier.py  template_factory.py  thread_manager.py  types.py  utils.py
src/ska_ser_namespace_manager/metrics/: metrics.py  metrics_config.py
tests/: test_main.py
tests/integration/api/: test_api.py
tests/unit/api/: test_config.py  test_health_api.py  test_metrics_api.py  test_people_api.py
tests/unit/controller/: test_action_controller.py  test_collect_controller.py  test_controller.py  test_leader_controller.py  test_leader_lock.py
tests/unit/core/: test_config_loader.py  test_kubernetes_api.py  test_namespace.py  test_notifier.py  test_template_factory.py  test_types.py  test_utils.py
tests/unit/metrics/: test_metrics.py
(+30 files in other folders)
