[tool.poetry]
name = "ska-namespace-manager"
version = "0.0.0"
description = "SKA Kubernetes Namespace Manager"
authors = ["System Team"]
license = "BSD-3-Clause"
packages = [
    { include = "ska_namespace_manager", from = "src" }
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
pylint = "^3.2.5"
pylint-junit = "^0.3.4"
pytest = ">=8.0.0"
pytest-cov = "^5.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.5"
sphinx-rtd-theme = "^2.0.0"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
