[tool.poetry]
name = "ska-ser-namespace-manager"
version = "0.0.1"
description = "SKA Kubernetes Namespace Manager"
authors = ["System Team"]
license = "BSD-3-Clause"
packages = [
    { include = "src" }
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[[tool.poetry.source]]
name = "gitlab-ska-cicd-services-api"
url = 'https://gitlab.com/api/v4/projects/22233142/packages/pypi/simple'

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.1"
starlette = "^0.37.2"
fastapi = "^0.111.1"
ska-cicd-services-api = "0.31.0+dev.cb7eacadc"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
pylint = "^3.2.5"
pylint-junit = "^0.3.4"
pytest = ">=8.0.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.5"
sphinx-rtd-theme = "^2.0.0"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
